<resources>
    <string name="app_name">CountriesApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="splashscreen">SplashScreen</string>
    <string name="travel">Travel</string>
    <string name="profile">Profile</string>
    <string name="about_us">About Us</string>
    <string name="loading">Loading...</string>
    <string name="drawer_open">Drawer open</string>
    <string name="drawer_close">Drawer close</string>
    <string name="developer">Developer: Mohammadreza Fekri \nThis app is about travel around 4 beautiful countries</string>
    <string name="delete">Delete</string>
    <string name="america">America</string>
    <string name="switzerland">Switzerland</string>
    <string name="iran">Iran</string>
    <string name="canada">Canada</string>
    <string name="about">About</string>
    <string name="set_as_wallpaper">Set As Wallpaper</string>
    <string name="are_you_sure_that_you_want_to_delete_this_item">Are you sure that you want to delete this item?</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="wallpaper_title">Set as wallpaper</string>
    <string name="dialog_message">Are you sure?</string>
    <string name="contact_us">Contact Us</string>
    <string name="github">GitHub: Mohammadreza Fekri</string>
    <string name="linkedin_link">Linkedin: Mohammadreza Fekri</string>
    <string name="g_mail">fekri.mohammadreza1386@gmail.com</string>
    <string name="more">More</string>
</resources>